# masters-dissertation

./: .gitignore  CMakeLists.txt  README.md
asset-baking/: CMakeLists.txt  main.cpp
assets/: color_test.glb  demo_level.glb  demo_level2.glb  demo_level_noPlayer.glb  demo_level_noPlayer_balls.glb  level_1.glb  level_1_with_balls.glb  physics_ball.glb  road.glb  sam_test.glb  testMan.glb  test_cube_tex.glb  testman2.glb
blender-addon/: blender_addon.py
games/KikiRunner/: CMakeLists.txt  main.cpp
games/KikiRunner/components/: CharacterComponent.h  ThirdPersonCameraComponent.hpp
games/KikiRunner/events/: LevelLoadedEvent.hpp  ObjectiveAchievedEvent.hpp  RequestLevelChangeEvent.hpp  ResetLevelEvent.hpp  ResetThirdPersonCameraEvent.hpp  RespawnCharacterEvent.hpp  TeleportPerformedEvent.h  TimerTriggerEvent.h  TriggerEvent.h
games/KikiRunner/systems/: CharacterSystem.h  DoorSystem.hpp  GoalTriggerSystem.h  LevelSystem.hpp  TeleportTriggerSystem.hpp  ThirdPersonCameraSystem.h  TimeLimitSystem.h  TriggerSystem.hpp  UISystem.hpp
games/demo/: CMakeLists.txt  DemoCameraPathSystem.hpp  main.cpp
games/demo/component/: CharacterComponent.h  ThirdPersonCameraComponent.hpp
games/demo/system/: CharacterSystem.h  GoalTriggerSystem.h  ThirdPersonCameraSystem.h  TimeLimitSystem.h
kiki-engine/: CMakeLists.txt  Engine.h  MessageCenter.h  kiki.h  temp.cpp  temp.h
kiki-engine/Animation/: Animation.h  AnimationComponent.h  AnimationLoader.cpp  AnimationLoader.h  AnimationSystem.h  Animator.cpp  Animator.h  CMakeLists.txt  SimpleAnimationSystem.h  Skeleton.h
kiki-engine/Audio/: AudioCache.h  AudioComponents.h  AudioManager.h  AudioSystem.h  BGMController.h  CMakeLists.txt  MiniaudioImpl.cpp
kiki-engine/Components/: AspectRatioComponent.hpp  BackgroundComponent.hpp  ButtonComponent.hpp  CMakeLists.txt  CameraComponent.h  ColourComponent.hpp  DebugComponent.hpp  DoorComponent.hpp  InterfaceAnimationComponent.hpp  InterfaceComponent.hpp  InterfaceTextureComponent.hpp  LevelEntityTag.hpp  MaterialComponent.hpp  MeshComponent.hpp  MiscComponent.hpp  RoughnessMetallicFactorComponent.hpp  SimpleAnimationComponent.hpp  TextComponent.hpp  TransparencyComponent.hpp  TriggerComponent.hpp
kiki-engine/ECS/: GameObject.h  System.h  World.h
kiki-engine/Event/: Event.h
kiki-engine/GltfLoader/: GltfLoader.cpp  GltfLoader.h  GltfLoader.hpp  GltfLoaderAssimp.h
kiki-engine/Timer/: Timer.h
kiki-engine/debugging/: CMakeLists.txt  DebugCamera.cpp  DebugCamera.hpp  DebugInterface.cpp  DebugInterface.hpp  DebugSystem.cpp  DebugSystem.hpp
kiki-engine/debugging/windows/: EntityViewer.cpp  EntityViewer.hpp  Log.hpp
kiki-engine/input/: CMakeLists.txt  InputManager.cpp  InputManager.hpp  InputSystem.cpp  InputSystem.hpp
kiki-engine/interface/: CMakeLists.txt  FontManager.cpp  FontManager.hpp  InterfaceSystem.cpp  InterfaceSystem.hpp  TextureManager.cpp  TextureManager.hpp
kiki-engine/interface/events/: AnimationEndEvent.hpp  ButtonClickEvent.hpp  ButtonHoverEvent.hpp
kiki-engine/interface/utils/: Font.hpp  InterfaceTexture.hpp  LatinAlphabet.hpp
kiki-engine/logging/: CMakeLists.txt  FatalError.cpp  FatalError.hpp  Logger.cpp  Logger.hpp
kiki-engine/physics/: CMakeLists.txt  PhysicsComponents.hpp  PhysicsContactListener.cpp  PhysicsContactListener.hpp  PhysicsDebugRenderer.cpp  PhysicsDebugRenderer.hpp  PhysicsManager.cpp  PhysicsManager.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  PhysicsUtils.hpp
kiki-engine/renderer/: CMakeLists.txt  Camera.hpp  MaterialManager.cpp  MaterialManager.hpp  MeshManager.cpp  MeshManager.hpp  RenderManager.cpp  RenderManager.hpp  Renderer.cpp  Renderer.hpp  SceneManager.cpp  SceneManager.hpp  WindowInfo.hpp  render.cpp  render.hpp
kiki-engine/renderer/shaders/: alpha.frag  bloom_downsample.frag  bloom_upsample.frag  chromatic_aberration.frag  composite.frag  custom_postprocess.frag  debug.frag  debug_line.frag  debug_line.vert  default.frag  default.vert  deferred_geometry.frag  deferred_geometry_alpha.frag  deferred_lighting.frag  fullscreen.vert  fxaa.frag  interface.vert  interface_shape.frag  interface_text.frag  interface_texture.frag  pbr.glsl  shadowMap.vert  skybox.frag  skybox.vert  ssao.frag  ssao_hblur.frag  ssao_vblur.frag  ssr.frag  tonemap.frag  triangle.frag  triangle.vert
kiki-engine/renderer/utils/: Allocator.cpp  Allocator.hpp  Buffer.cpp  Buffer.hpp  Commands.cpp  Commands.hpp  Descriptors.cpp  Descriptors.hpp  Devices.cpp  Devices.hpp  Image.cpp  Image.hpp  Pipelines.cpp  Pipelines.hpp  Shaders.cpp  Shaders.hpp  Synchronisation.cpp  Synchronisation.hpp  Texture.cpp  Texture.hpp  ToString.cpp  ToString.hpp  VMA.cpp  VulkanWindow.cpp  VulkanWindow.hpp  VulkanWrapper.hpp  VulkanWrapper.inl  allocator.cpp  allocator.hpp  angle.hpp  commands.cpp  commands.hpp  context_helpers.cpp  context_helpers.hxx  defaults.hpp  descriptors.cpp  descriptors.hpp  error.cpp  error.hpp  load.cpp  (+17 more)
